fixed alignment

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -60,7 +60,6 @@
 
 .promo-container {
 	min-height: 140px;
-	margin-top: 10px;
 }
 
 .promo-image {
@@ -76,6 +75,7 @@
 	text-shadow: -3px 3px 3px black;
 	margin-top: 10px;
 	margin-left: 30px;
+	padding-top: 5px;
 }
 
 .promo-title {
@@ -91,6 +91,10 @@
 .promo-link:hover {
 	color: @toc-orange;
 	margin-left: 10px;
+}
+
+.promo-col {
+	padding-left: 0px,
 }
 
 .media {
